fix: Do not overflow on the help form in claudy

--- a/src/styles/services/claudy.css
+++ b/src/styles/services/claudy.css
@@ -56,6 +56,7 @@
 
 .coz-claudy-menu-content-wrapper {
   overflow: hidden;
+  max-width: 100vw;
 }
 
 .coz-btn-close {
@@ -111,7 +112,7 @@
 }
 
 .coz-claudy-menu-action:hover {
-  background: var(--pale-grey)
+  background: var(--pale-grey);
 }
 
 .coz-claudy-menu-action[data-complete=true] {
@@ -178,7 +179,7 @@ by child elements */
   font-weight: 700;
 }
 
-.coz-claudy-menu-action-description-header .coz-claudy-menu-action-title{
+.coz-claudy-menu-action-description-header .coz-claudy-menu-action-title {
   margin: 0;
 }
 
